# AVCS-DNA-MATRIX-SPIRIT-v6.0

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  avcs_dna_matrix_spirit_app.py  demo.bat  demo.sh  mkdir industrial_core  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
adaptive_learning/: adaptive_core.py  adaptive_engine.py  context_manager.py  feedback_controller.py  pattern_recognition.py  sample_data.py
digital_twin/: industrial_digital_twin.py
industrial_core/: analytics_engine.py  data_manager.py  industrial_config.py
plc_integration/: integration_adapters.py
ui/: dashboard.py  twin_control_panel.py
