[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avcs-dna-matrix-spirit"
version = "7.0.0"
description = "Advanced Vibration Control System with AI-Driven Intelligence"
authors = [
    {name = "AVCS Engineering Team", email = "engineering@avcs-systems.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
keywords = [
    "vibration control", 
    "industrial ai", 
    "predictive maintenance",
    "digital twin",
    "fpso"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/avcs-systems/avcs-dna-matrix-spirit"
Documentation = "https://avcs-systems.github.io/avcs-dna-matrix-spirit/"

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_learning*"]
